--- a/.github/workflows/prod-deployment-versioning-note-upload-coverage-reports.yml
+++ b/.github/workflows/prod-deployment-versioning-note-upload-coverage-reports.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Create Github Release
         run: npx semantic-release
         env:
-          GITHUB_TOKEN: ${{ secrets.MY_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: upload coverage reports to Codecov #Upload coverage report on Codecov
         run: npx codecov
@@ -67,7 +67,7 @@ jobs:
         run: |
           curl --request POST \
           --url https://apt.github.com/repos/${{ github.repository }}/issues \
-          --header 'authorization: Bearer ${{ secrets.GITHHUB_TOKEN }}' \
+          --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
           --header 'content-type: application/json' \
           --data '{
           "title": "Automated issues for commit: ${{ github.sha }}",
