--- a/.github/workflows/prod-deployment-versioning-note-upload-coverage-reports.yml
+++ b/.github/workflows/prod-deployment-versioning-note-upload-coverage-reports.yml
@@ -6,6 +6,10 @@ on:
 jobs:
   build-prod:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write #to be able to publish a Github release
+      issues: write #to be able to comment on released issues
+      pull-requests: write #to be able to comments on release pull requests
     steps:
       - uses: actions/checkout@v2
       - name: Cache node_modules
