--- a/.github/workflows/prod-deployment-versioning-note-upload-coverage-reports.yml
+++ b/.github/workflows/prod-deployment-versioning-note-upload-coverage-reports.yml
@@ -1,7 +1,6 @@
 name: Deploy Application On Prod Along with Release notes and Code Coverange
 on:
-  push:
-    branches: [master]
+  workflow_dispatch
 
 jobs:
   build-prod:
@@ -46,7 +45,9 @@ jobs:
           name: build
           path: build
 
+
       - name: Create Github Release
+        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
         run: npx semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -59,7 +60,17 @@ jobs:
       - name: install the 'surge' to Deploy the our build
         run: npm install -g surge
 
+      - name: Deploy to Staging
+        if: github.event_name == 'push' && github.ref == 'refs/heads/development'
+        run: surge --project ./build --domain
+          prod-my-react-app-abhiverma001.surge.sh
+        env:
+          SURGE_LOGIN: ${{ secrets.SURGE_LOGIN }} #To get the login id you can run command locally 'surge whoami'.
+          SURGE_TOKEN: ${{ secrets.SURGE_TOKEN }} #To get the tocken you can run the command locally 'surge token' then create the secrets in github repo
+  
+
       - name: Deploy to Prod
+        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
         run: surge --project ./build --domain
           prod-my-react-app-abhiverma001.surge.sh
         env:
