--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -83,6 +83,6 @@ jobs:
           --header 'content-type: application/json' \
           --data '{
           "title": "Automated issues for commit: ${{ github.sha }}",
-          "body": "This issue was automatically created by the GitHub Actions workflow **${{ github.workflow }}**. \n\n The commit hash was: _${{ github.sha }}_.",
+          "body": "This issue is automatically created by the GitHub Actions workflow **${{ github.workflow }}**. \n\n The commit hash was: _${{ github.sha }}_.",
           "assignees": ["${{ github.event.pull_request.user.login }}"]     
           }'
