--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   CI:
-    if: github.event_name == 'pull_request' && github.ref == 'refs/heads/development'
+    if: github.event_name == 'pull_request' && github.ref == 'refs/heads/workflow'
     runs-on: ubuntu-latest
     permissions:
       contents: write #to be able to publish a Github release
