--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,7 +1,7 @@
 name: CI
 on:
   pull_request:
-    branches: [master, development]
+    branches: [master, development, workflow]
 
   push:
     branches: [master, development]
